@@ -1,3 +1,10 @@
+2000-07-26  Geoff Keating  <geoffk@cygnus.com>
+
+	* nm.c (main): Ignore '-X32_64' as an option.
+	* ar.c (main): Likewise.
+	* binutils.texi (nm): Document new option.
+	(ar): Likewise.
+
 2000-07-23  Michael Sokolov  <msokolov@ivan.Harhan.ORG>
 
 	* rdcoff.c (external_coff_symbol_p): K&R-ise.
